2007-01-25  topf  <topf@users.berlios.de>

  * ChangeLog, SlackBuild, doinst.sh, footprint: Upgraded to 2.4.3 (ldv)

2006-07-08  topf  <topf@users.berlios.de>

  * ChangeLog, SlackBuild, footprint, slack-desc: Added cups-pdf-2.4.1 (ldv)
