@@ -7,10 +7,10 @@ drwxr-xr-x  root/root  install/
 -rw-r--r--  root/root  install/slack-desc
 drwxr-xr-x  root/root  usr/
 drwxr-xr-x  root/root  usr/doc/
-drwxr-xr-x  root/root  usr/doc/cups-pdf-2.4.1/
--rw-r--r--  root/root  usr/doc/cups-pdf-2.4.1/COPYING
--rw-r--r--  root/root  usr/doc/cups-pdf-2.4.1/ChangeLog
--rw-r--r--  root/root  usr/doc/cups-pdf-2.4.1/README
+drwxr-xr-x  root/root  usr/doc/cups-pdf-2.4.3/
+-rw-r--r--  root/root  usr/doc/cups-pdf-2.4.3/COPYING
+-rw-r--r--  root/root  usr/doc/cups-pdf-2.4.3/ChangeLog
+-rw-r--r--  root/root  usr/doc/cups-pdf-2.4.3/README
 drwxr-xr-x  root/root  usr/lib/
 drwxr-xr-x  root/root  usr/lib/cups/
 drwxr-xr-x  root/root  usr/lib/cups/backend/
@@ -18,5 +18,4 @@ drwxr-xr-x  root/root  usr/lib/cups/backend/
 drwxr-xr-x  root/root  usr/share/
 drwxr-xr-x  root/root  usr/share/cups/
 drwxr-xr-x  root/root  usr/share/cups/model/
--rw-r--r--  root/root  usr/share/cups/model/PostscriptColor_rev3b.ppd
--rw-r--r--  root/root  usr/share/cups/model/PostscriptColor_rev4.ppd
+-rw-r--r--  root/root  usr/share/cups/model/PostscriptColor.ppd
