@@ -1,8 +1,13 @@
 2007-01-25  topf  <topf@users.berlios.de>
 
-  * ChangeLog, SlackBuild, doinst.sh, footprint: Upgraded to 2.4.3 (ldv)
+  * ChangeLog, SlackBuild, footprint, info: Upgraded to 2.4.3 (ldv)
+
+  * SlackBuild, doinst.sh, footprint, info, slack-desc: Upgraded to 2.4.2 (ldv)
 
 2006-07-08  topf  <topf@users.berlios.de>
 
-  * ChangeLog, SlackBuild, footprint, slack-desc: Added cups-pdf-2.4.1 (ldv)
+  * ChangeLog, SlackBuild, footprint, info, slack-desc:
+  Added cups-pdf-2.4.1 (ldv)
+
+  * SlackBuild, footprint, info, slack-desc: Added cups-pdf-2.4.1 (ldv)
 
